Support managing Sentry 9.0

--- a/templates/default/sentry.config.yml.erb
+++ b/templates/default/sentry.config.yml.erb
@@ -15,6 +15,7 @@ mail.password: '<%= @smtp_password %>'
 mail.use-tls: <%= @smtp_tls.to_s %>
 # The email address to send on behalf of
 mail.from: '<%= @smtp_from %>'
+mail.subject-prefix: ''
 
 # If you'd like to configure email replies, enable this.
 # mail.enable-replies: false
